--- a/main.html
+++ b/main.html
@@ -6,26 +6,66 @@
     <title>Document</title>
 </head>
 <body>
+    <button id="review">오답노트</button>
     <div id="word"></div>
+    <div id="mean"></div>
     <button id="next">next</button>
+    <button id="wrong_answer">X</button>
+    <div id="wrong_answer_show"></div>
     <script>
 
         document.addEventListener("DOMContentLoaded",function(){
             let testarray = [];
             let wordcount=0;
-            fetch("http://localhost:9500/shuffle",{method: "GET"}).then((rowdata)=>{return rowdata.json()}).then((shuffle)=>{
+            let falsenote=[];
+            let reviewmode=false;
+            loadwords();
+            document.getElementById("next").addEventListener("click",function(event){
+                wordcount++;
+                let template=``;
+                if(!reviewmode){
+                template=testarray[wordcount%testarray.length].rowdata[0];
+                }else{
+                    template=falsenote[wordcount%falsenote.length][0];
+                    document.getElementById("mean").style.display="block";
+                    document.getElementById("mean").innerHTML=falsenote[wordcount%falsenote.length][1];
+                }
+                console.log(template)
+                document.getElementById("word").style.display="block";
+                document.getElementById("word").innerHTML=template;
+            });
+            document.getElementById("wrong_answer").addEventListener("click",function(event){
+                falsenote.push(testarray[wordcount].rowdata);
+                console.log(falsenote);
+                let template=falsenote.map(words=>`<li>${words[0]}<br>${words[1]}</li>`).join('')
+                console.log(template)
+                document.getElementById("wrong_answer_show").style.display="block";
+                document.getElementById("wrong_answer_show").innerHTML=template;
+            });
+            document.getElementById("review").addEventListener("click",function(event){
+                 wordcount=0;
+                 reviewmode=!reviewmode;
+                 if(reviewmode){
+                    testarray=falsenote
+                    document.getElementById("mean").innerHTML=testarray[wordcount][1]
+                 }
+                 else{
+                    loadwords();
+                 }
+                 btnchg=document.getElementById("review");
+                 btnchg.innerText="wordnote"
+                 document.getElementById("wrong_answer_show").innerHTML=``;
+            });
+
+            function loadwords(){
+                fetch("http://localhost:9500/shuffle",{method: "GET"}).then((rowdata)=>{return rowdata.json()}).then((shuffle)=>{
                 console.log(shuffle)
                 testarray=shuffle
                 let template=shuffle[0].rowdata[0];
                 document.getElementById("word").style.display="block";
                 document.getElementById("word").innerHTML=template;
             })
-            document.getElementById("next").addEventListener("click",function(event){
-                wordcount++;
-                let template=testarray[wordcount].rowdata[0];
-                document.getElementById("word").style.display="block";
-                document.getElementById("word").innerHTML=template;
-            });
+            }
         });
     </script>
 </body>
